0.6.10:
  - Fix issue with handling of suspend/resume and character input
    (thanks to Scott Mcdermott for the patch)

0.6.9
  - New maintainer: Bas Zoetekouw <bas@debian.org>
  - License is now GPL version 2 only
  - Updated German, Dutch, English, Polish, Russian, Czech translations and
    added Basque, Swedish, Viernamese and Brazilian translations.  Thanks to
    Jens Seidel, Rene van Bevern, Piarres Beobide, Krzysztof Krzyzaniak, Yuri
    Kozlov,  Eddy Petrişor, Katarína Machálková, Clytie Siddall and Felipe
    Augusto van de Wiel.
  - Nodes containing a "." are now correctly found
  - Non-ASCII man pages are displayed correctly
  - Improved the history behavior of the search input line
  - Broken tag tables are now automatically fixed
  - Don't segfault when a broken regexp is entered 
  - Fixed a number of segfaults caused by using uninitialized pointers and 
    off-by-1 errors
  - Fixed heap corruption caused by non-ascii chars in info pages
  - Fixed a lot of patch searching issues
  - Fixed text display on narrow terminals 
  - Fixed highlighting of searches
  - The default pinforc now uses the terminal's default foreground and
    background colors.  Thanks to Rob Funk for a patch.
  - Use libreadline by default;  readline version 4 is now required.
  - Better cooperation between ncurses and readline
  - Fixed some memory leaks
  - Got rid of tempnam() calls
  - Fixed -Wall and -Wshadow compiler warnings
  - Use utf8 in documentation files and fixed typoes
    
0.6.8
  Patches from Witold Filipczyk for node detection algorithms in man
  and info.
  Added default item on search prompt.
  Bugfix in info link freeing procedure, which failed on exim pages.
  Bugfix for dir page lookup when several matches are found--there was
  a double close() problem.
0.6.7    
  Added scrolling in left/right direction (!!!new config file keys).
  Fixed handling of info entries like `emacs21/emacs'--modified
  function matchfile().